# squadron-sdk-py

./: README.md  pyproject.toml
.github/workflows/: publish.yml
examples/echo/: failing_plugin.py  host.py  plugin.py
examples/echo/tools/: text.py
scripts/: gen_protos.py
src/squadron_sdk/: __init__.py  app.py  handshake.py  interface.py  plugin.py  server.py
src/squadron_sdk/_generated/: plugin_grpc.py  plugin_pb2.py
src/squadron_sdk/proto/: plugin.proto
tests/: test_echo.py  test_tool_groups.py
