[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "squadron-sdk"
version = "0.1.1"
description = "Python SDK for writing Squadron tool plugins (wire-compatible with the Go squadron-sdk)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Max Lund" }]
dependencies = [
    "python-plugin>=0.1.0",
    "grpclib[protobuf]>=0.4.7",
    "protobuf>=4.25",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.60",
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/squadron_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
addopts = "-q"
asyncio_mode = "auto"
